# supplier-invoice-loader

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: .env.example  config.template.yaml  config_template.py
database/schemas/: README.md
deploy/: README.md  build_package.py  deploy.bat  deploy.sh  run_smoke_tests.bat  service_uninstaller.bat  test-deployment.ps1  upgrade_dependencies.bat
docs/: INIT_PROMPT_NEW_CHAT.md  SESSION_NOTES.md  project_file_access.json
docs/architecture/: README.md
docs/database/: TYPE_MAPPINGS.md
docs/decisions/: README.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md  INSTALL_CUSTOMER.md  RELEASE_NOTES_v2.0.0.md  WINDOWS_SERVICE_GUIDE.md
docs/guides/: CUSTOMER_TESTING_CHECKLIST.md  DEVELOPMENT.md  N8N_WORKFLOW_SETUP.md  PYTHON_SETUP.md  SECURITY.md  TESTING.md
docs/operations/: EMAIL_ALERTING.md  MONITORING.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/sessions/: README.md
docs/stories/: README.md
docs/troubleshooting/: README.md
n8n-workflows/: README.md  n8n-SupplierInvoiceEmailLoader.json  template.json
scripts/: cleanup_diagnostics.py  cleanup_script.py  clear_test_data.py  deep_cleanup.py  generate_full_context.py  generate_project_access.py  regenerate_project_access.py  service_installer.py  split_project_access.py  test_invoice_integration.py  verify_installation.py
src/api/: models.py
src/business/: isdoc_service.py
src/database/: database.py  postgres_staging.py
src/extractors/: __init__.py  base_extractor.py  generic_extractor.py  ls_extractor.py
src/utils/: config.py  env_loader.py  monitoring.py  notifications.py  text_utils.py
tests/: README.md  conftest.py
tests/samples/: README.md
tests/unit/: test_api.py  test_batch_extraction.py  test_config.py  test_extraction.py  test_import.py  test_isdoc.py  test_monitoring.py  test_notifications.py
