# Supplier Invoice Loader - Project Configuration
# Configuration for modern Python tools (black, isort, pytest)

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supplier-invoice-loader"
version = "2.0.0"
description = "Automatic invoice processing for multiple suppliers with NEX Genesis integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "ICC", email = "support@icc.sk"}
]
keywords = ["invoice", "automation", "pdf", "isdoc", "nex-genesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# UPDATED: Synchronized with requirements.txt
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.0",
    "python-multipart==0.0.12",
    "pdfplumber==0.11.4",
    "PyPDF2==3.0.1",
    "Pillow>=10.4.0",
    "lxml>=5.0.0",
    "python-dotenv==1.0.1",
    "psutil==6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
    "black==23.12.0",
    "flake8==6.1.0",
    "isort==5.13.0",
    "mypy==1.7.1",
    "safety==3.2.0",
    "bandit==1.7.5",
    "ipython==8.18.1",
    "ipdb==0.13.13",
    "rich==13.7.0",
]

[project.urls]
Homepage = "https://github.com/rauschiccsk/supplier-invoice-loader"
Documentation = "https://github.com/rauschiccsk/supplier-invoice-loader/blob/main/README.md"
Repository = "https://github.com/rauschiccsk/supplier-invoice-loader"
Issues = "https://github.com/rauschiccsk/supplier-invoice-loader/issues"

# ============================================================================
# SETUPTOOLS - Package Discovery (CRITICAL FOR src/ LAYOUT)
# ============================================================================
[tool.setuptools]
# Explicitly tell setuptools to find packages in src/
packages = ["src", "src.api", "src.business", "src.database", "src.extractors", "src.utils"]

[tool.setuptools.package-dir]
# Map package root to src directory
"" = "."

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Directories
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | __pycache__
)/
'''

# ============================================================================
# ISORT - Import Sorter
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "env/*"]

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# MYPY - Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict typing
ignore_missing_imports = true
exclude = [
    'venv/',
    '.venv/',
    'env/',
    'tests/',
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true